fix: text alignment and padding for snapCreateAccountSubtitle

--- a/ui/pages/keyring-snaps/new-snap-account-page/new-snap-account-page.scss
+++ b/ui/pages/keyring-snaps/new-snap-account-page/new-snap-account-page.scss
@@ -25,6 +25,20 @@
   background-position: bottom;
 }
 
+.snap-account-subtitle{
+  @include screen-sm-min {
+    padding-left: 48px;
+    padding-right: 48px
+  }
+
+  @include screen-md-min {
+    padding-left: 48px;
+    padding-right: 48px
+  }
+
+  text-align: center;
+}
+
 .snap-account-cards {
   grid-template-columns: repeat(3, 1fr);
   height: 100%;
